--- a/style.css
+++ b/style.css
@@ -83,19 +83,37 @@ border-radius: 10px;
 .manu-button a {
     text-decoration: none;
 }
+.manu-button:hover{
+    background-color:rgb(77, 209, 72);
+}
 .blog-section{
     width: 95%;
-    border: 1px solid green;
+    display:grid;
+    grid-template-columns:repeat(3,auto);
+    column-gap: 50px;
+    row-gap: 50px;
+
+    
+       /* border: 1px solid green; */
 }
 .blog-item{
-    /* width: 30%; */
-    border: 1px solid red;
+    /* width: 26%; */
+    /* border: 1px solid red; */
     padding: 0;
+    box-sizing: border-box;
+    background-color:  #f2f2f2;
+}
+.blog-item img{
+    width: 100%;
 }
 .blog-section < .blog-item < img {
     width: 100%;
     padding-right: 10px;
 }
 .transfer-button{
-
+    border-radius: 5px;
 }
+.transfer-button a {
+    text-decoration: none;
+}
+
