--- a/style.css
+++ b/style.css
@@ -145,6 +145,20 @@ border-radius: 10px;
     margin-top:20px;
     padding: 20px 30px;
 }
-
-
-
+.match-section{
+display: grid;
+grid-template-columns: repeat(3, 1fr);
+column-gap: 40px;
+row-gap: 40px;
+    
+}
+.match-schedule{
+    background-color: #f2f2f2;
+}
+.img-info{
+    display: flex;
+}
+.match-info{
+    text-align: center;
+    padding-bottom: 30px;
+}
